--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,22 +5,33 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  say-hello:
+  build:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: cimg/base:stable
+      - image: rikorose/gcc-cmake:latest
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
-      - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          # https://fossies.org/linux/ldc/.circleci/config.yml
+          name: Install prerequisites
+          command: |
+            apt-get -q update
+            # https://github.com/ninja-build/ninja/wiki/Pre-built-Ninja-packages
+            apt-get -yq install ninja-build
+      - checkout
+      - run: g++ --version
+      - run: cmake --version
+      - run:
+          name: Build
+          command: |
+            cmake -G Ninja -S . -B ./build
+
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  say-hello-workflow:
+  build-test-workflow:
     jobs:
-      - say-hello
+      - build
