--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
           command: |
             apt-get -q update
             # https://github.com/ninja-build/ninja/wiki/Pre-built-Ninja-packages
-            apt-get -yq install ninja-build flex
+            apt-get -yq install ninja-build flex bison
       - checkout
       - run: g++ --version
       - run: cmake --version
@@ -31,7 +31,7 @@ jobs:
       - run:
           name: Test
           command: |
-            python3 ./test/test_scanner_linux.py
+            python3 ./test/test_parser_linux.py
 
 
 # Invoke jobs via workflows
