Output platform information:construction_worker:
Signed-off-by: NPU-Franklin <1109797240@qq.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
       - checkout
       - run: g++ --version
       - run: cmake --version
+      - run: uname -m
       - run:
           name: Build
           command: |
