Add sudo permission to test run:construction_worker:
Signed-off-by: NPU-Franklin <1109797240@qq.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
       - run:
           name: Test
           command: |
-            python3 ./test/test_parser_linux.py
+            sudo python3 ./test/test_parser_linux.py
 
 
 # Invoke jobs via workflows
