Fix file not found error:construction_worker:
Signed-off-by: NPU-Franklin <1109797240@qq.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs:
       - run:
           name: Test
           command: |
+            sudo ls -al /root/project/cmake-build-debug
             sudo python3 ./test/test_parser_linux.py
 
 
